# Titan_core

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BUSINESS_PLAN_LIVESTOCK.md  CLAUDE.md  DEVELOPMENT.md  DOMAIN.md  README.md  REVISAO_CRITICA_CORE.md  VISION.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: quality.yml
apps/: __init__.py
apps/api/: __init__.py  main.py  verification.py
apps/bootstrap/: __init__.py  __main__.py
apps/worker/: __init__.py  config.py  main.py
config/keycloak/: titan-realm.json
docs/: CHECKLIST_DE_IMPLEMENTACAO.md  MANUAL_DO_USUARIO_E_INTEGRADOR.md  PLANO_DE_IMPLEMENTACAO_VALIDADO.md  Plano_Implementacao_Titan_Greenfield_v3.md  REQUISITOS_DE_PRODUCAO.md  Titan_Arquitetura_e_Dominio_v2.md
docs/adr/: 0001-monolito-modular-e-estrutura-do-repositorio.md  0002-isolamento-e-propriedade-por-organization.md  0003-postgresql-rls-e-defesa-em-profundidade.md  0004-armazenamento-de-documents-com-mongodb-gridfs.md  0005-autenticacao-com-oidc-provider.md  0006-entrega-assincrona-com-outbox-e-message-broker.md  0007-checkpoints-de-integridade-e-timestamp-independente.md  0008-gestao-e-rotacao-de-chaves-criptograficas.md  0009-assinaturas-certificados-e-perfis-de-confianca.md  0010-verificacao-externa-e-verification-bundle.md  0011-fontes-normativas-vigencia-e-reavaliacao-temporal.md  0027-convencoes-da-api-http.md  (+28 more)
scratch/: validar_passo_8_1.py  validar_passo_8_2.py  validar_passo_8_3.py  validar_passo_8_4.py  validar_passo_8_5.py  validar_passo_8_6.py  validar_passo_9_1.py
tests/: __init__.py  test_smoke.py
(+158 files in other folders)
